# ana-compiler

./: .gitignore  CHANGELOG.md  Makefile  README.md  ana-compiler.cabal  build  compiler.cabal  exp.lisp  flake.nix  let.int  main.c  test-shift-operations.c  x1001-lec2.cabal
app/: Main.hs
input/: binary_search_tree.ana  isPrime.ana  linked_list.ana  nested_vec.ana  pair.ana  points.ana  print.ana  progC.ana  reminder.ana  sum-tail-recursive.ana  tuple.ana  tuple_error.ana  vec_example.ana
programs/: deepstack.ana  dict.ana  fib.ana  progA.ana  progB.ana  progD.ana  progE.ana  sum-non-tail-recursive.ana  vec_error_outofbounds.ana  vec_error_type.ana
src/: AnaCompiler.hs
src/AnaCompiler/: Asm.hs  Compile.hs  Expr.hs  Parser.hs  Utils.hs
test/: Spec.hs
test/Tests/: Unit.hs
