cabal-version:      2.4
name:               ana-compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             f3r10
maintainer:         frledesma@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
    default-language: Haskell2010
    ghc-options:
        -Wall

library
    import: common-settings
    exposed-modules:  
        AnaCompiler
            AnaCompiler.Parser
            AnaCompiler.Expr
            AnaCompiler.Compile
        -- HsBlog
        --     HsBlog.Convert
        --     HsBlog.Html
        --         HsBlog.Html.Internal
        --     HsBlog.Markup
    build-depends:
        base
        , parsec 
    hs-source-dirs:   src

executable compile
    import: common-settings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    -- , sexpresso
                    , parsec
                    , ana-compiler
                    -- , sexp-grammar
                    -- , megaparsec
                    -- , text
    hs-source-dirs:   app
    ghc-options: -O
